feat: initial box status added
