# docs/swagger.json
@@ -234,6 +234,14 @@
                 ],
                 "responses": {}
             }
+        },
+        "/box/getstatus": {
+            "get": {
+                "tags": [
+                    "Box"
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
